<resources>
    <string name="app_name">Come To Egypt</string>
    <string name="state_name">Cairo, Capital of Egypt</string>
    <string name="hotels_restaurants">Hotels and Restaurants</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="entertainment">Entertainment</string>
    <string name="historical_places">Historical Places</string>
    <string name="hospitals">Hospitals</string>
    <string name="metro_station">Metro Stations</string>
    <string name="image">image</string>
    <string name="hotel_name_1">Aracan Pyramids Hotel</string>
    <string name="hotel_location_1">Giza,Cairo</string>
    <string name="hotel_name_2">Mena Inn Pyramids</string>
    <string name="hotel_name_3">Soluxe Cairo Hotel</string>
    <string name="hotel_name_4">Pharaohs Hotel</string>
    <string name="hotel_name_5">Swiss Inn Hotel Cairo</string>
    <string name="hotel_name_6">Pyramids Loft Homestay</string>
    <string name="hotel_name_7">Safir Hotel Cairo</string>
    <string name="hotel_name_8">Al Masa Hotel</string>
    <string name="hotel_location_2">Pyramids,Giza</string>
    <string name="hotel_location_3">17 Hadyek Alahram Street, Giza</string>
    <string name="hotel_location_4">12 Lotfi Hassouna Street, Giza</string>
    <string name="hotel_location_5">7, El Hegaz Street, Giza </string>
    <string name="hotel_location_6">Nearby Great Sphinx of Giza</string>
    <string name="hotel_location_7">El-Messaha Square - Reffaa Street, Cairo </string>
    <string name="hotel_location_8">Abdel Aziz El Shennawy Street, Nasr City, Cairo</string>
    <string name="restaurant_name_1">Left Bank</string>
    <string name="restaurant_name_2">MIRAI</string>
    <string name="restaurant_name_3">Sequoia</string>
    <string name="restaurant_name_4">The Grill Restaurant </string>
    <string name="restaurant_name_5">Saigon Restaurant </string>
    <string name="restaurant_name_6">The Smokery</string>
    <string name="restaurant_name_7">Carlos LePacha 1901</string>
    <string name="restaurant_name_8">Esplanade Cafe Restaurant</string>
    <string name="restaurant_location_1">Left Bank", "53 Abou El Feda Street | Zamalek, Cairo</string>
    <string name="restaurant_location_2">53 Abu El Feda St | Zamalek, Cairo </string>
    <string name="restaurant_location_3">20 Abou El Feda St. | Zamalek, Cairo</string>
    <string name="restaurant_location_4">InterContinental Cairo Semiramis | Corniche El Nile Downtown,Cairo</string>
    <string name="restaurant_location_5">Corniche El Nil | Fairmont Towers Nile City - 2005 B, Corniche El Nil</string>
    <string name="restaurant_location_6">Katameya Heights | New Cairo - 5th District, Cairo </string>
    <string name="restaurant_location_7">Saray El Gezira st. Zamalek,Cairo</string>
    <string name="restaurant_location_8">InterContinental Cairo Citystars | Omar Ibn El Khattab St.,Cairo</string>
    <string name="historical_name_1">The Pyramids of Giza</string>
    <string name="historical_name_2">Saqqara (The Step Pyramid)</string>
    <string name="historical_name_3">Temple of Karnak</string>
    <string name="historical_name_4">Temple of  Hatshepsut</string>
    <string name="historical_name_5">Esna Temple</string>
    <string name="historical_name_6">Kom Ombo Temple</string>
    <string name="historical_name_7">Temple of Philae</string>
    <string name="historical_name_8">Temples at Abu Simbel</string>
    <string name="historical_name_9">Mosque of Ibn Tulun</string>
    <string name="historical_location_1">The Pyramids are situated at Giza just outside Cairo</string>
    <string name="historical_location_2">The Step Pyramid is situated 20 km from Giza </string>
    <string name="historical_location_3">The Temple of Karnak is at the Luxor</string>
    <string name="historical_location_4">was built on the West bank of the Nile near the Valley of the Kings at Luxor</string>
    <string name="historical_location_5">is located in the centre of the town of Esna</string>
    <string name="historical_location_6">is located on the bank of the Nile River between Edfu and Aswan at Kom Ombo</string>
    <string name="historical_location_7">is located on the island of Agilka near the first cataract</string>
    <string name="historical_location_8">is located in Aswan</string>
    <string name="historical_location_9">is located in Cairo</string>
    <string name="hospital_name_1">Children’s Cancer Hosbital 57357</string>
    <string name="hospital_name_2">Cairo Medical Centre</string>
    <string name="hospital_name_3">City Medical Clinic</string>
    <string name="hospital_name_4">Cleopatra Hospital</string>
    <string name="hospital_name_5">Dr Magdi Ahmed Saeed Hospital</string>
    <string name="hospital_name_6">El Salam International Hospital</string>
    <string name="hospital_name_7">Integrated Clinic</string>
    <string name="hospital_name_8">Revive Medical Center</string>
    <string name="hospital_location_1">Cairo</string>
    <string name="hospital_location_2">4 Abou Obaida , Al Bakry , Roxy, Helioplis , Cairo </string>
    <string name="hospital_location_3">Hadaeq Al Ahram:Gate 4 (Mina) , Cairo</string>
    <string name="hospital_location_4">39 Cleopatra Street , Salah El Din Square , Helioplis , Cairo</string>
    <string name="hospital_location_5">32 Abu Dawood Elzahry Str , Cairo</string>
    <string name="hospital_location_6">Cornich El Nil , PO Box 338 , Maadi , Cairo</string>
    <string name="hospital_location_7">59 Abdelmonem Road , 10th Floor, Flat 32 , El Mohandeseen , Cairo</string>
    <string name="hospital_location_8">47 Mohamed Mazhar St , 1st Floor , Zamalek , Cairo</string>
    <string name="entertainment_name_1">KidZania Cairo</string>
    <string name="entertainment_name_2">Escapology Egypt</string>
    <string name="entertainment_name_3">Escape Room Egypt</string>
    <string name="entertainment_name_4">BreakOut</string>
    <string name="entertainment_name_5">Gravity Code</string>
    <string name="entertainment_name_6">Escapers</string>
    <string name="entertainment_name_7">HintHunt Cairo</string>
    <string name="entertainment_name_8">MindMaze Egypt</string>
    <string name="entertainment_name_9">The Horror House</string>
    <string name="entertainment_location_1">Cairo</string>
    <string name="entertainment_location_2">Giza</string>
</resources>